ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-voting-ingress
    annotations:
      kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: azure-vote-front.195cf0c7cf3e4dd48aa2.eastus.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: azure-vote-front
            port: 
              number: 80
